style: fix padding on small screen size

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@
     min-width: 320px;
     max-width: 1440px;
     margin-inline: auto;
-    padding-inline: 80px;
+    padding-inline: 17px;
+    @apply md:px-[80px];
   }
 }
